# unsloth_multigpu

./: .gitignore  MULTIGPU_TESTING.md  README.md  pyproject.toml  requirements.txt  run_training.sh
configs/: example_config.yaml
docker/: Dockerfile  build.sh
scripts/: create_gcp_instance.sh  run_multigpu_tests.py  setup_instance.sh  simple_gpu_monitor.py
tests/: debug_config.yaml  multigpu_2gpu_config.yaml  multigpu_4gpu_config.yaml  test_debug_training.py
unsloth_multigpu/: multigpu_trainer.py  train.py  utils.py  worker_process.py
unsloth_multigpu/data_model/: data_model.py
unsloth_multigpu/dataset/: custom_dataset.py  debug_dataset.py  select_dataset.py
unsloth_multigpu/datasets/: dataset.py
unsloth_multigpu/logger/: training_logger.py
unsloth_multigpu/metrics/: metrics.py
